# AnywhereGL

./: AnywhereGameLibrary.sln  CMakeLists.txt  LICENSE  README.md  glad.c  main.cpp
AnywhereGameLibrary/: AGL.h  AnywhereGameLibrary.vcxproj  AnywhereGameLibrary.vcxproj.filters  Main.cpp  glad.c  imgui.ini
AnywhereGameLibrary/Interface/: IObject.h
AnywhereGameLibrary/Objects/3D/Cube/: Cube.cpp  Cube.h  Cube.vert
AnywhereGameLibrary/Objects/3D/Light/: Fragment.frag  Light.cpp  Light.h  Vertex.vert
AnywhereGameLibrary/Physics/: AGLPhys.cpp  AGLPhys.h
AnywhereGameLibrary/Scene/: MainScene.cpp  MainScene.h
AnywhereGameLibrary/Util/: Camera.cpp  Camera.h  Window.cpp
AnywhereGameLibrary/include/glad/: glad.h
Interface/: IObject.h  IScene.h  Object.h
Objects/3D/: Cube.cpp  Cube.h  Fragment.frag  Vertex.vert
Objects/3D/Cube/: Cube.cpp  Cube.frag  Cube.h  Cube.vert  Fragment.frag  Vertex.vert
Objects/3D/Light/: Fragment.frag  Light.cpp  Light.h  Vertex.vert
Scene/: MainScene.cpp  MainScene.h
Util/: Camera.cpp  Camera.h  Window.cpp  Window.h
include/Shader/: Shader.cpp  Shader.h
include/glad/: glad.h
